# circuit-sim

./: .gitignore  Cargo.toml  index.html  todo.md  wasm_build.sh
js/: sapp-jsutils.js
src/: main.rs
src/backend/: README.md  circuit.rs  component.rs  lib.rs  model.rs  node.rs  tagged_value.rs  value.rs
src/backend/components/: and_gate.rs  gates.rs  mod.rs  pin_enum.rs  register.rs  wire.rs
src/console/: main.rs
src/frontend/: main.rs  mod.rs
src/frontend/canvas/: camera.rs  grid.rs  input.rs  mod.rs
src/frontend/canvas/components/: draw.rs  mod.rs
src/frontend/canvas/grid/: instanced_drawer.rs  mod.rs  naive_drawer.rs  shader_drawer.rs
src/frontend/canvas/grid/shaders/: grid.frag  grid.vert  instancing.frag  instancing.vert
src/frontend/canvas/wiring/: instancing.rs  mod.rs  wire.rs  wire_mesh.rs  wire_variant.rs
src/frontend/canvas/wiring/shaders/: instancing.frag  instancing.vert
src/frontend/gui/: component_selector.rs  component_utils.rs  mod.rs  profiler.rs  toolbar.rs
src/frontend/profiler/: mod.rs
src/frontend/util/: shader.rs
src/profiler/: mod.rs  profiler.rs
