[package]
name = "circuitsim"
version = "0.1.0"
edition = "2024"
default-run = "frontend"

[dependencies]
egui = "0.31.1"
egui-macroquad = "0.17.3"
epaint = "0.31.1"
macroquad = "0.4.14"
miniquad = "0.4.8"
paste = "1.0.15"
petgraph = "0.8.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }

[lib]
name = "backend"
path = "src/backend/lib.rs"

[[bin]]
name = "console"
path = "src/console/main.rs"

[[bin]] 
name = "frontend"
path = "src/frontend/main.rs"

